docs: subscription
