# src/routes/admin.ts
@@ -1,6 +1,6 @@
 import express from "express";
 import {config} from "../constants/settings";
-import {handleAddUser} from "../controllers";
+import {handleAddUser, handleGetUsers} from "../controllers";
 import {JwtHelper} from "../helpers/jwt/jwt.helper";
 import {UserTokenDb} from "../models";
 import {redisClient} from "../helpers/redis.connector";
@@ -18,6 +18,7 @@ const jwtHelper = new JwtHelper({
 const router = express.Router()
 
 
-router.post('/add-user',jwtHelper.requirePermission(JwtType.ADMIN_USER),handleAddUser)
+router.post('/users',jwtHelper.requirePermission(JwtType.ADMIN_USER),handleAddUser)
+router.get('/users',jwtHelper.requirePermission(JwtType.ADMIN_USER),handleGetUsers)
 
 export default router;
